--- a/index.html
+++ b/index.html
@@ -9,17 +9,132 @@
     <link rel="stylesheet" href="./style.css">
 
     <!-- BOOTSRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
+
     <title>Our Team</title>
 </head>
 
 <body>
+    <!-- Header -->
+    <header class="container">
+        <h1 class="title">Meet our team</h1>
+        <p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse obcaecati quis vel eius,
+            beatae et suscipit
+            repellendus est cupiditate hic! Ut impedit molestias veniam, distinctio quibusdam nemo modi excepturi sequi?
+        </p>
+    </header>
 
+    <!-- MAIN -->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0 card-template">
+                            <div class="col-md-4">
+                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title name">Nome Cognome</h5>
+                                    <p class="card-text ruolo">Ruolo</p>
+                                    <p class="card-text mail">Mail</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- JS -->
     <script src="./script.js"></script>
 </body>
