--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                     <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
-                                <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
+                                <img id="imgCard" src="./img/male1.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title name">Nome Cognome</h5>
-                                    <p class="card-text ruolo">Ruolo</p>
-                                    <p class="card-text mail">Mail</p>
+                                    <h5 id="nomeCognome" class="card-title name">Nome Cognome</h5>
+                                    <p id="ruoloUtente" class="card-text ruolo">Ruolo</p>
+                                    <p id="mailUtente" class="card-text mail">Mail</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <!-- <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
                                 <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
@@ -64,10 +64,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <!-- <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
                                 <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
@@ -80,12 +80,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <!-- <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
                                 <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
@@ -98,10 +98,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <!-- <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
                                 <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
@@ -114,10 +114,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col">
-                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                    <!-- <div class="card mb-3 border-0" style="max-width: 540px;">
                         <div class="row g-0 card-template">
                             <div class="col-md-4">
                                 <img src="./img/male1.png" class="img-fluid rounded-start" alt="...">
@@ -130,11 +130,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </main>
+
     <!-- JS -->
     <script src="./script.js"></script>
 </body>
